@@ -5631,13 +5631,6 @@ typedef enum
 
 typedef enum
 {
-  ORIG_TS_DATA_ALLOCATE,
-  ORIG_TS_DATA_MALLOCED,
-  ORIG_TS_DATA_CONSTANT
-} ORIG_TSIOBufferDataFlags;
-
-typedef enum
-{
   ORIG_TS_VC_CLOSE_ABORT = -1,
   ORIG_TS_VC_CLOSE_NORMAL = 1
 } ORIG_TSVConnCloseFlags;
@@ -5789,10 +5782,6 @@ REGRESSION_TEST(SDK_API_TSConstant) (RegressionTest * test, int atype, int *psta
   PRINT_DIFF(TS_CACHE_SCAN_RESULT_DELETE_ALL_ALTERNATES);
   PRINT_DIFF(TS_CACHE_SCAN_RESULT_UPDATE);
   PRINT_DIFF(TS_CACHE_SCAN_RESULT_RETRY);
-
-  PRINT_DIFF(TS_DATA_ALLOCATE);
-  PRINT_DIFF(TS_DATA_MALLOCED);
-  PRINT_DIFF(TS_DATA_CONSTANT);
 
   PRINT_DIFF(TS_VC_CLOSE_ABORT);
   PRINT_DIFF(TS_VC_CLOSE_NORMAL);
