@@ -2,6 +2,8 @@
 Changes with Apache Traffic Server 3.3.1
 
 
+  *) [TS-1667] remove unused enum TSIOBufferDataFlags
+
   *) [TS-1538] SSL accept performance regression
 
   *) [TS-977] RecCore usage cleanup
